--- a/css/sass/main.scss
+++ b/css/sass/main.scss
@@ -12,6 +12,7 @@
 @import "components/preloader";
 @import "components/buttons";
 @import "components/nav";
+@import "components/footer";
 @import "components/other";
 @import "components/animation";
 
