--- a/css/main.css
+++ b/css/main.css
@@ -1097,12 +1097,10 @@ a:hover, a:focus {
 /* FOOTER
    ========================================================================== */
 .footer {
-  height: 350px;
-  background: #273340;
-  position: relative; }
+  height: 280px;
+  margin-top: 10px; }
   .footer .main-footer {
-    text-align: center;
-    margin-top: 10px; }
+    text-align: center; }
     .footer .main-footer p,
     .footer .main-footer i {
       color: #FEFEE6; }
@@ -1112,21 +1110,58 @@ a:hover, a:focus {
     .footer .main-footer i {
       margin: 5px;
       font-size: 1.3em; }
+  .footer .backto-top {
+    display: none; }
   .footer .details {
     margin-bottom: 20px; }
+    .footer .details figure {
+      width: 45%;
+      padding: 0px;
+      margin: 0 auto 20px; }
     .footer .details p:first-of-type {
-      text-transform: uppercase; }
+      text-transform: uppercase;
+      font-family: proxima_bold, sans-serif; }
     .footer .details p:nth-of-type(3) {
       font-family: proxima_bold, sans-serif; }
     .footer .details p:nth-of-type(4) {
       text-transform: uppercase; }
   .footer p.copy-right {
-    position: absolute;
-    bottom: 25px;
-    left: 50%;
-    -webkit-transform: translateX(-50%);
-            transform: translateX(-50%);
     font-size: 0.7em; }
+
+@media (min-width: 650px) {
+  .footer .main-footer {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    text-align: left;
+    -webkit-box-align: end;
+        -ms-flex-align: end;
+                -ms-grid-row-align: flex-end;
+            align-items: flex-end;
+    width: 100%;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between; }
+  .footer .details {
+    font-size: 0.75em;
+    margin-bottom: 0px; }
+    .footer .details figure {
+      margin: 0 0 20px; }
+    .footer .details p {
+      line-height: 1.7em; }
+    .footer .details p:first-of-type {
+      margin-bottom: 30px; }
+  .footer .social-icons i {
+    font-size: 0.8em; }
+  .footer .backtop-btn {
+    display: inherit;
+    text-align: right;
+    cursor: pointer; }
+  .footer p.copy-right {
+    font-size: 0.65em;
+    -webkit-transform: translateY(4px);
+            transform: translateY(4px); } }
 
 * {
   box-sizing: border-box !important; }
