--- a/css/sass/components/_footer.scss
+++ b/css/sass/components/_footer.scss
@@ -20,7 +20,7 @@
 		}
 	}
 
-	.backto-top {
+	.backtop-btn {
 		display: none;
 	}
 
@@ -46,6 +46,7 @@
 
 	p.copy-right {
 		font-size: 0.7em;
+		// margin-bottom: 20px;
 	}
 }
 	
