--- a/css/main.css
+++ b/css/main.css
@@ -199,7 +199,7 @@ html.fp-enabled,
   height: 4px;
   width: 4px;
   border: 0;
-  background: rgba(255, 255, 255, 0.1);
+  background: rgba(255, 255, 255, 0.2);
   left: 50%;
   top: 50%;
   margin: -2px 0 0 -2px;
@@ -352,7 +352,7 @@ img {
 
 .flex-container {
   max-width: 850px;
-  margin: 60px auto;
+  margin: 20px auto;
   display: -ms-flexbox;
   display: -webkit-box;
   display: flex;
@@ -360,7 +360,8 @@ img {
 
 @media (min-width: 1280px) {
   .flex-container {
-    max-width: 960px; } }
+    max-width: 960px;
+    margin: 60px auto; } }
 
 .col-one {
   -ms-flex-preferred-size: 100%;
@@ -783,7 +784,8 @@ h6 {
   font-family: proxima_bold, sans-serif, "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
   color: #FEFEE6;
   margin: 0px;
-  font-weight: normal; }
+  font-weight: normal;
+  line-height: 1em; }
 
 h1 {
   margin-bottom: 0.5em;
@@ -938,8 +940,8 @@ a:hover, a:focus {
   position: fixed;
   z-index: 200;
   background: #E94444;
-  width: 100%;
-  height: 100%; }
+  width: 100vw;
+  height: 100vh; }
 
 .menu-container p,
 .menu-container li,
@@ -950,7 +952,7 @@ a:hover, a:focus {
 .nav-menu-content {
   font-family: proxima_black, sans-serif;
   text-align: left;
-  margin-top: 40px; }
+  margin-top: 20px; }
   .nav-menu-content li {
     list-style-type: none;
     font-size: 1.85em;
@@ -969,22 +971,27 @@ a:hover, a:focus {
 
 .nav-about-text h2,
 .nav-about-text p {
-  font-family: proxima_thin, sans-serif; }
+  font-family: proxima_light, sans-serif; }
 
 .nav-about-text h2 {
-  margin-bottom: 0.5em; }
+  margin-bottom: 0.5em;
+  font-size: 1.2em; }
+  .nav-about-text h2 span {
+    font-family: proxima_bold, sans-serif; }
 
-.nav-about-text h2 span {
-  font-family: proxima_bold, sans-serif; }
+.nav-about-text p {
+  display: none; }
 
 .nav-back-button {
   cursor: pointer;
   position: absolute;
   top: 4%;
-  right: 6%; }
+  right: 4%; }
   .nav-back-button p {
     font-size: 1em;
-    text-transform: uppercase; }
+    text-transform: uppercase;
+    -webkit-transform: translateY(-5px);
+            transform: translateY(-5px); }
 
 /* Larger than tablet */
 @media (min-width: 750px) {
@@ -1010,22 +1017,20 @@ a:hover, a:focus {
     .nav-menu-content li {
       list-style-type: none;
       font-size: 2em;
-      margin-bottom: 0.75em; }
+      margin-bottom: 0.6em; }
       .nav-menu-content li a {
         text-decoration: none;
         cursor: pointer;
-        color: #FEFEE6;
-        -webkit-transition: color 0.5s;
-        transition: color 0.5s; }
+        color: #FEFEE6; }
     .nav-menu-content .menu-list-items a:hover {
-      color: #E94444; }
+      text-decoration: underline; }
     .nav-menu-content .social-main-nav a {
       margin-left: 10px; }
   .nav-about-text h2 {
-    font-size: 1.85em;
+    font-size: 1.6em;
     line-height: 1.2em; }
-    .nav-about-text h2 span {
-      font-family: proxima_bold, sans-serif; } }
+  .nav-about-text p {
+    display: inherit; } }
 
 @media (min-width: 850px) {
   .nav-menu-content li {
@@ -1110,7 +1115,7 @@ a:hover, a:focus {
     .footer .main-footer i {
       margin: 5px;
       font-size: 1.3em; }
-  .footer .backto-top {
+  .footer .backtop-btn {
     display: none; }
   .footer .details {
     margin-bottom: 20px; }
@@ -1558,6 +1563,9 @@ a:hover, a:focus {
 /**
  * MOBILE FIRST QUERIES
  */
+.background .background-container {
+  margin-bottom: 0px; }
+
 .background .background-text h1 {
   text-align: center;
   color: #E94444;
@@ -1600,8 +1608,10 @@ a:hover, a:focus {
       font-size: 1.4em;
       line-height: 1.4; } }
 
-.wireframes .sketch-wireframes h2 {
-  text-align: left; }
+.wireframes .sketch-wireframes {
+  margin-top: 30px; }
+  .wireframes .sketch-wireframes h2 {
+    text-align: left; }
 
 .wireframes .wireframe-sketches > div {
   -ms-flex-preferred-size: 22%;
