--- a/css/sass/pages/_prototype.scss
+++ b/css/sass/pages/_prototype.scss
@@ -170,6 +170,9 @@
  */
 
 .background {
+	.background-container {
+		margin-bottom: 0px;
+	}
 	.background-text {
 		h1 {
 			text-align: center;
@@ -212,6 +215,7 @@
 		@include intro-paragraph;
 	}
 	.sketch-wireframes {
+		margin-top: 30px;
 		h2 {
 			text-align: left;
 		}
