--- a/css/sass/components/_nav.scss
+++ b/css/sass/components/_nav.scss
@@ -142,12 +142,16 @@
 	position: absolute;
 	top: 4%;
 	right: 4%;
-	p {
-		font-size: 1em;
-		text-transform: uppercase;
-		transform: translateY(-5px);
+	width: 30px;
+	height: 30px;
+	// p {
+	// 	font-size: 1em;
+	// 	text-transform: uppercase;
+	// 	transform: translateY(-5px);
+	// }
+	img {
+		width: 100%;
 	}
-
 }
 
 
