--- a/css/main.css
+++ b/css/main.css
@@ -886,6 +886,28 @@ a:hover, a:focus {
     color: #fff;
     text-decoration: none; }
 
+.main-btn-reverse {
+  background: #FEFEE6;
+  border: 1px solid #E94444;
+  color: #E94444;
+  display: inline-block;
+  height: 44px;
+  outline: none;
+  padding: 0 20px;
+  text-align: center;
+  text-decoration: none;
+  border-radius: 25px;
+  -webkit-transition: background 1s;
+  transition: background 1s;
+  font-family: proxima_bold, sans-serif; }
+  .main-btn-reverse i {
+    margin-left: 10px; }
+  .main-btn-reverse:hover, .main-btn-reverse:focus {
+    background: #E94444;
+    border-color: #fff;
+    color: #fff;
+    text-decoration: none; }
+
 /* NAVIGATION
    ========================================================================== */
 .logo {
@@ -1205,7 +1227,9 @@ a:hover, a:focus {
 /* Larger than desktop */
 /* Larger than Desktop HD */
 /* Homepage - Main Laning page */
-/* Mobile first queries */
+/**
+	 MIAN LANDING SECTION
+ 	 ---------------------------------*/
 .main-landing-page .pixi-background {
   width: 100%;
   height: 100%; }
@@ -1236,6 +1260,8 @@ a:hover, a:focus {
   margin-bottom: 0.25em;
   font-size: 3em;
   line-height: 1em; }
+  .main-landing-page .landing-header h1 span {
+    text-decoration: line-through; }
 
 .main-landing-page .landing-header h3 {
   font-family: proxima_light, sans-serif;
@@ -1282,7 +1308,35 @@ a:hover, a:focus {
       left: 450px;
       top: 83px; } }
 
+/* ABOUT SECTION
+   ========================================================================== */
+.about-me h1,
+.about-me h2,
+.about-me h3,
+.about-me h4,
+.about-me h5,
+.about-me p,
+.resume h1,
+.resume h2,
+.resume h3,
+.resume h4,
+.resume h5,
+.resume p {
+  color: #E94444;
+  text-align: center; }
+
+/* Larger than phablet */
+@media (min-width: 550px) {
+  .about-me h1 {
+    font-size: 2.5em; }
+  .about-me h4 {
+    font-size: 1.5em; } }
+
 /* Larger than Desktop HD */
+@media (min-width: 1200px) {
+  .about-me h1 {
+    font-size: 3.5em; } }
+
 /* PROTOTYPE LANDING
    ========================================================================== */
 /**
@@ -1298,20 +1352,13 @@ a:hover, a:focus {
     opacity: 0.08;
     width: 300px; }
 
-.prototype {
-  text-align: center; }
-  .prototype h1 {
-    font-size: 1.5em; }
-
 .prototype-container {
   background: #E94444; }
-  .prototype-container h3,
-  .prototype-container p {
-    color: #FEFEE6; }
   .prototype-container h1 {
-    text-transform: uppercase; }
-  .prototype-container .quote-text p {
-    font-size: 1.5em; }
+    font-size: 3em; }
+  .prototype-container p {
+    color: #FEFEE6;
+    margin-bottom: 15px; }
 
 /**
  * LARGER THAN MOBILE
@@ -1333,92 +1380,20 @@ a:hover, a:focus {
     margin-bottom: 10px; }
   .prototype-container .quote-text {
     font-size: 2em;
-    line-height: 1em; }
-  .prototype-container p {
-    margin-bottom: 15px; } }
+    line-height: 1em; } }
 
-.about-me .about-footer-text h2 {
-  font-size: 2.5em;
-  color: #E94444; }
-
-/* Interactiive */
-/* Mobile first queries */
-.about-me .wrapper-container {
-  max-width: 960px;
-  height: 100vh;
-  padding: 30px; }
-
-.about-me h1,
-.about-me h2,
-.about-me h3,
-.about-me h4,
-.about-me h5,
-.about-me p {
-  color: #E94444;
-  text-align: center; }
-
-.about-me h1 {
-  font-size: 1.5em;
-  font-family: proxima_black, sans-serif;
-  line-height: 1em; }
-
-.about-me .skills {
-  color: #E94444;
-  font-family: avant_medium, sans-serif;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  width: 85%;
-  padding-left: 0; }
-  .about-me .skills li {
-    list-style-type: none;
-    font-size: 1em; }
-
-.about-me .rayfinn-logo-wrapper {
-  text-align: center;
-  margin-bottom: 10px; }
-  .about-me .rayfinn-logo-wrapper #rayfinn-logo {
-    width: 70%;
-    fill: transparent;
-    stroke: #E94444; }
-
-/* Larger than mobile */
-/* Larger than phablet */
-@media (min-width: 550px) {
-  .about-me h1 {
-    font-size: 2.5em; }
-  .about-me .skills li {
-    font-size: 1.5em; }
-  .about-me .rayfinn-logo-wrapper #rayfinn-logo {
-    width: 100%; }
-  .about-me h4 {
-    font-size: 1.5em; } }
-
-/* Larger than tablet */
-@media (min-width: 750px) {
-  .about-me h1 {
+/* USER INTERFACE
+   ========================================================================== */
+.ui {
+  background: #E94444; }
+  .ui h1 {
     font-size: 3em; }
-  .about-me .skills {
-    width: 70%; }
-    .about-me .skills li {
-      font-size: 1.5em; }
-  .about-me .rayfinn-logo-wrapper #rayfinn-logo {
-    width: 120%; } }
+  .ui p {
+    color: #FEFEE6;
+    margin-bottom: 15px; }
 
-/* Larger than desktop */
-/* Larger than Desktop HD */
-@media (min-width: 1200px) {
-  .about-me h1 {
-    font-size: 3.5em; }
-  .about-me .skills {
-    width: 60%; }
-    .about-me .skills li {
-      font-size: 1.5em; }
-  .about-me .rayfinn-logo-wrapper #rayfinn-logo {
-    width: 150%;
-    -webkit-transform: translateX(-15%);
-            transform: translateX(-15%); } }
-
+/* RESUME SECTION
+   ========================================================================== */
 /* PROTOTYPE CASE STUDY / BIRD NERD
    ========================================================================== */
 .prototype-main-wrapper p {
@@ -1962,93 +1937,6 @@ a:hover, a:focus {
     width: 49%; }
   .design-portfolio-items .col-1 {
     width: 100%; } }
-
-/* RESUME
-   ========================================================================== */
-/**
- * MOBILE FIRST QUERIES
- */
-.resume-intro-wrapper .resume-watermark {
-  width: 100%;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-  position: absolute;
-  z-index: -1;
-  opacity: 0.02;
-  visibility: hidden; }
-
-.resume-body {
-  background: #fff;
-  padding-top: 30px; }
-  .resume-body p,
-  .resume-body h1,
-  .resume-body h2,
-  .resume-body h3,
-  .resume-body h4,
-  .resume-body li {
-    color: #333; }
-  .resume-body p,
-  .resume-body li {
-    font-size: 0.9em; }
-  .resume-body h1 {
-    font-family: avant_bold, sans-serif;
-    font-size: 2.5em;
-    margin-bottom: .5em;
-    color: #E94444; }
-  .resume-body h1,
-  .resume-body .year,
-  .resume-body .work-placement,
-  .resume-body .skill-heading,
-  .resume-body .skills-tech {
-    font-family: avant_bold, sans-serif; }
-  .resume-body .work-title,
-  .resume-body .work-responsibilities {
-    font-family: avant_medium, sans-serif; }
-  .resume-body .year,
-  .resume-body .skill-heading {
-    font-size: 1.5em;
-    text-decoration: underline; }
-  .resume-body .work-placement span {
-    font-family: avant_book, sans-serif; }
-  .resume-body .work-title {
-    margin-bottom: 1em;
-    font-style: italic; }
-  .resume-body .work-description {
-    margin-bottom: 1em; }
-  .resume-body ul {
-    margin: 0 0 45px; }
-  .resume-body .technical-skills p {
-    text-indent: 20px;
-    font-style: italic; }
-  .resume-body .technical-skills .skills-tech {
-    font-family: avant_medium, sans-serif; }
-  .resume-body .technical-skills .skill {
-    margin-bottom: 35px; }
-
-/**
- * LARGER THAN TABLET
- */
-@media screen and (min-width: 750px) {
-  /*   Intro section   */
-  .resume-intro-wrapper .resume-watermark {
-    visibility: visible; }
-  .resume-body .experience {
-    -ms-flex-preferred-size: 55%;
-        flex-basis: 55%;
-    margin: 0 0 5px 0;
-    max-width: 55%; }
-  .resume-body .technical-skills {
-    -ms-flex-preferred-size: 35%;
-        flex-basis: 35%;
-    margin: 0 5px 0 0;
-    max-width: 35%; } }
-
-/* CONTACT
-   ========================================================================== */
-.contact {
-  background: #1e2832; }
 
 @media print {
   header,
