--- a/css/sass/pages/_home.scss
+++ b/css/sass/pages/_home.scss
@@ -249,7 +249,7 @@
 
 
 .ui {
-	background: $salmon;
+	background: $light-salmon;
 	h1 {
 		font-size: 3em;
 	}
@@ -263,8 +263,8 @@
 /* RESUME SECTION
    ========================================================================== */
 
-.resume {
-
+.graphic-design {
+	background: $pink;
 }
 
 
