update copy for about section on landing page

--- a/css/sass/base/_config.scss
+++ b/css/sass/base/_config.scss
@@ -33,8 +33,9 @@ $dark-blue: #1e2832;
 
 $grey: #e4ecf1;
 
-$light-blue: #33b2ff;
-$pink: #F15FA8;
+$grey-blue: #b1c0ca;
+$light-blue: #98c2d8;
+// $pink: #F15FA8;
 $warm-grey: #1D2831;
 $cobolt-blue: #0176EA;
 
