fix margins prototype.html

--- a/css/sass/pages/_prototype.scss
+++ b/css/sass/pages/_prototype.scss
@@ -233,9 +233,12 @@
 }
 
 @media screen and (min-width: 750px) {
-	.sketch-wireframes {
+	.wireframes-container {
+		.sketch-wireframes {
 		margin-top: 60px;
+		}
 	}
+
 }
 
 /**
