--- a/css/main.css
+++ b/css/main.css
@@ -358,9 +358,13 @@ img {
   display: flex;
   padding: 30px; }
 
-@media (min-width: 1280px) {
+@media (min-width: 750px) {
   .flex-container {
     max-width: 960px;
+    margin: 60px auto; } }
+
+@media (min-width: 1280px) {
+  .flex-container {
     margin: 60px auto; } }
 
 .col-one {
@@ -1609,7 +1613,7 @@ a:hover, a:focus {
   font-family: proxima_light_italic, sans-serif; }
 
 @media screen and (min-width: 750px) {
-  .sketch-wireframes {
+  .wireframes-container .sketch-wireframes {
     margin-top: 60px; } }
 
 /**
@@ -1970,3 +1974,6 @@ a:hover, a:focus {
   font-size: 10px;
   letter-spacing: 0.4em;
   cursor: pointer; }
+
+.prototype-container .prototype-test img {
+  width: 175px; }
