--- a/css/sass/base/_flex.scss
+++ b/css/sass/base/_flex.scss
@@ -48,9 +48,15 @@ img {
 	padding: 30px;
 }
 
+@media (min-width: 750px) {
+    .flex-container {
+    max-width: 960px;
+    margin: 60px auto;
+    }
+}
+
 @media (min-width: 1280px) {
 	.flex-container {
-	max-width: 960px;
     margin: 60px auto;
 	}
 }
