--- a/css/sass/components/_footer.scss
+++ b/css/sass/components/_footer.scss
@@ -55,6 +55,7 @@
 	
 @media (min-width: 650px) {
 	.footer {
+		margin-bottom: 30px;
 		.main-footer {
 			flex-direction: row;
 			text-align: left;
