--- a/css/sass/base/_type.scss
+++ b/css/sass/base/_type.scss
@@ -23,7 +23,8 @@
 @font-face { font-family: proxima_bold; src: url(../fonts/Proxima-Nova-Bold.otf);}
 @font-face { font-family: proxima_black; src: url(../fonts/Proxima-Nova-Black.otf);}
 
-@font-face { font-family: galaxy_body; src: url(../fonts/GalaxieCopernicus-Book.otf);}
+@font-face { font-family: fat_frank; src: url(../fonts/FatFrank-Free.otf);}
+@font-face { font-family: freight_light; src: url(../fonts/FreightSanProLig.otf);}
 
 
 // $body: Gotham_thin, sans-serif;
@@ -32,10 +33,12 @@
 
 $thin: proxima_thin, sans-serif;
 $body: proxima_light, sans-serif;
+// $body: freight_light, sans-serif;
 $body-italic: proxima_light_italic, sans-serif;
 $medium: proxima_medium, sans-serif;
 $bold: proxima_bold, sans-serif;
-$black: proxima_black, sans-serif;
+// $black: proxima_black, sans-serif;
+$black: fat_frank, sans-serif;
 
 $light_avant: avant_light, sans-serif;
 $body_avant: avant_book, sans-serif;
