--- a/css/sass/pages/_home.scss
+++ b/css/sass/pages/_home.scss
@@ -127,8 +127,7 @@
 /* ABOUT SECTION
    ========================================================================== */
 
-.about-me,
-.resume{
+.about-me {
 
 	h1,
 	h2, 
@@ -194,24 +193,15 @@
 		color: $reverse;
 		margin-bottom: 15px;
 	}
-
-
-}
-
-
-/**
- * LARGER THAN MOBILE
- */
-@media (min-width: 400px) {
-
-}	
-
-/**
- * LARGER THAN PHAMBLET
- */
-@media (min-width: 550px) {
+	.prototype-mockup {
+		img {
+			width: 80%;
+			display: none;
+		}
+	}
 
 }
+
 
 /**
  * LARGER THAN TABLET
@@ -223,7 +213,7 @@
 		img {
 			width: 500px;
 		}
-}
+	}
 	
 	.prototype-container {
 		article {
@@ -239,6 +229,11 @@
 		.quote-text {
 			font-size: 2em;
 			line-height: 1em;
+		}
+		.prototype-mockup {
+			img {
+				display: inherit;
+			}
 		}
 	}
 
@@ -257,14 +252,44 @@
 		color: $reverse;
 		margin-bottom: 15px;
 	}
+	.ui-container {
+		.ui-mockup {
+			img {
+			width: 400px;
+			display: none;
+			}
+		}
+	}
+
 }
 
+@media screen and (min-width: 750px) {
+	.ui {
+		.ui-container {
+			.ui-mockup {
+				img {
+				display: inherit;
+				}
+			}
+		}
+	}
+}
 
 /* RESUME SECTION
    ========================================================================== */
 
 .graphic-design {
-	background: $pink;
+	background: $salmon;
+	.design-container {
+		background: $salmon;
+		h1 {
+			font-size: 3em;
+		}
+		p {
+			color: $reverse;
+			margin-bottom: 15px;
+		}
+	}
 }
 
 
