--- a/css/sass/pages/_home.scss
+++ b/css/sass/pages/_home.scss
@@ -52,16 +52,6 @@
 			color: $salmon;
 		}
 	}
-
-	#salmon-fish {
-		position: relative;
-		#salmon-fin {
-			position: absolute;
-			width: 11px;
-			left: 176px;
-			top: 44px;
-		}
-	}
 }
 
 /* Larger than mobile */
@@ -107,19 +97,6 @@
 		}
 		p {
 			font-size: 1.3em;
-		}
-		// .container img {
-		// 	width: 25%;
-		// }
-
-		#salmon-fish {
-			position: relative;
-			#salmon-fin {
-				position: absolute;
-				width: 20px;
-				left: 450px;
-				top: 83px;
-			}
 		}
 	}
 }
@@ -172,7 +149,9 @@
  * MOBILE FIRST QUERIES
  */
 
-.p-background-icon {
+.p-background-icon, 
+.ui-background-icon,
+.design-background-icon {
 	position: absolute;
 	top: 50%;
 	left: 50%;
@@ -264,6 +243,12 @@
 }
 
 @media screen and (min-width: 750px) {
+	.ui-background-icon {
+		img {
+			width: 500px;
+		}
+	}
+
 	.ui {
 		.ui-container {
 			.ui-mockup {
@@ -288,6 +273,14 @@
 		p {
 			color: $reverse;
 			margin-bottom: 15px;
+		}
+	}
+}
+
+@media screen and (min-width: 750px) {
+	.design-background-icon {
+		img {
+			width: 500px;
 		}
 	}
 }
