--- a/css/sass/base/_mixins.scss
+++ b/css/sass/base/_mixins.scss
@@ -67,7 +67,7 @@
 
 @mixin portfolio-captionitalic(){
   color: $primary-font-color;
-  font-family: $body-italic; 
+  font-family: $bold; 
   font-size: 14px;
   line-height: 20px;
 }
