--- a/css/sass/components/_nav.scss
+++ b/css/sass/components/_nav.scss
@@ -9,15 +9,23 @@
 	z-index: 25;
 	margin: 0;
 		img {
-			width: 40%;
+			width: 50%;
 		}
 	display: none; 
+	transform: translateY(-5px);
 }
 
 .logo.active-logo {
 	display: inherit;
 }
 
+@media (min-width: 450px) {
+	.logo {
+		img {
+			width: 40%;
+		}
+	}
+}
 
 /**
  * HAMBURGER TOGGLE MENU
@@ -38,7 +46,7 @@
 		width: 40px;
 		height: 20px;
 		overflow: hidden;
-		transform: translateY(5px);
+
 
 		.menu-bar {
 		  background: $salmon;
@@ -59,10 +67,13 @@
 .secondary-nav { 
 	background: $aqua-blue;
 	width: 100%;
-	height: 80px;
+	height: 10%;
 	position: fixed;
 }
 
+// @media (min-width: 750px) {
+// 	height: 100px;
+// }
 
 /**
  * FULL PAGE NAVIGATION
@@ -71,14 +82,9 @@
 .fp-nav-wrapper {
 	position: fixed;
 	z-index: 200;
-	// background: $salmon;
-	// background: #181723;
-	// background: #1D2A46;
-	// background: #082a3c;
 	background: #072231;
 	width: 100vw;
 	height: 100vh;
-
 
 }
 	
@@ -145,11 +151,6 @@
 	right: 4%;
 	width: 30px;
 	height: 30px;
-	// p {
-	// 	font-size: 1em;
-	// 	text-transform: uppercase;
-	// 	transform: translateY(-5px);
-	// }
 	img {
 		width: 100%;
 	}
